<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/project_options"
        android:fontFamily="@font/rosemary"
        android:icon="@drawable/ic_baseline_playlist_add_24"
        android:title="Projects"

        >

        <menu>

            <item
                android:id="@+id/action_create"
                android:fontFamily="@font/rosemary"
                android:icon="@drawable/ic_baseline_create_new_folder_24"
                android:title="@string/create"

                />

            <item
                android:id="@+id/action_view_projects"
                android:fontFamily="@font/rosemary"
                android:icon="@drawable/ic_baseline_sync_24"
                android:title="@string/view_projects" />
            <item
                android:id="@+id/action_import_project"
                android:fontFamily="@font/rosemary"
                android:icon="@android:drawable/ic_menu_upload"
                android:title="@string/import_project" />
            <item
                android:id="@+id/action_clipboard_copy"
                android:fontFamily="@font/rosemary"
                android:icon="?attr/actionModeCopyDrawable"
                android:title="@string/clipboard_copy" />
            <item
                android:id="@+id/action_area"
                android:fontFamily="@font/rosemary"
                android:icon="@drawable/baseline_area_chart_24"
                android:title="@string/area" />
        </menu>
    </item>
    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
       />

</menu>