<?xml version="1.0" encoding="utf-8"?>
<!--    This file is part of Msitu.
     <https://github.com/kitandara/kibira>

     Copyright (C) 2022 Digital Solutions

     Msitu is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     Msitu is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with Msitu. If not, see <http://www.gnu.org/licenses/>-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/project_options"
        android:fontFamily="@font/rosemary"
        android:icon="@drawable/ic_baseline_playlist_add_24"
        android:title="Area Menu"

        >

        <menu>

            <item
                android:id="@+id/tree_estimate"
                android:fontFamily="@font/rosemary"
                android:icon="@drawable/baseline_forest_24"
                android:title="@string/tree_estimate" />
            <item
                android:id="@+id/action_area"
                android:fontFamily="@font/rosemary"
                android:icon="@drawable/baseline_area_chart_24"
                android:title="@string/area" />
            <item
                android:id="@+id/visual"
                android:fontFamily="@font/rosemary"
                android:icon="@drawable/baseline_area_chart_24"
                android:title="@string/visual_representation" />
        </menu>
    </item>
    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"
        android:icon="@drawable/ic_baseline_power_settings_new_24"
        />

</menu>