<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="380dp"
android:layout_marginTop="55dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="#FFFFFF"
            android:text="@string/login"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"

            >

        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="34dp"
            android:background="@color/hr" />


<!--        &lt;!&ndash;TextInput layout which acts as a wrapper to the edit text&ndash;&gt;-->
<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->

<!--            app:hintTextAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--            android:hint="Enter your password..."-->

<!--app:passwordToggleEnabled="true"-->
<!--        android:scrollbarSize="25dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/password"-->
<!--            android:layout_width="262dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginTop="97dp"-->
<!--            android:hint="@string/prompt_password"-->
<!--            android:inputType="textPassword"-->

<!--            android:selectAllOnFocus="true"/>-->
<!--        </com.google.android.material.textfield.TextInputLayout>-->

<EditText
    android:id="@+id/password"
    android:layout_width="262dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="97dp"
    android:hint="@string/prompt_password"
    android:inputType="textPassword"

    android:selectAllOnFocus="true"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"

            android:selectAllOnFocus="true"
        />


        <Button
            android:id="@+id/login"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="200dp"
            android:background="@color/green"
            android:backgroundTint="@color/green"
            android:enabled="false"
            android:text="Login" />

        <Button
            android:id="@+id/registerPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="60dp"
            android:background="@color/green"
            android:backgroundTint="@color/green"
            android:enabled="true"
            android:text="Register" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="64dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>