<?xml version="1.0" encoding="utf-8"?>
<!--    This file is part of Msitu.
     <https://github.com/kitandara/kibira>

     Copyright (C) 2022 Digital Solutions

     Msitu is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     Msitu is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with Msitu. If not, see <http://www.gnu.org/licenses/>-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/createProjectLayout"
        android:layout_width="match_parent"
        android:layout_height="446dp"
        android:layout_gravity="center"
        android:layout_marginStart="9dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="9dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/rosemary"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="Create Project"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="normal"

                >

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/hr" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/sans"
                android:hint="Project Name"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold|normal"
                app:boxStrokeColor="@color/quantum_googgreen"
                app:boxStrokeWidth="1dp"
                app:shapeAppearanceOverlay="@style/button1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/rosemary"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:textStyle="bold|normal"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/button1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/MeshSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rosemary"
                        android:hint="Line length"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_marginEnd="5dp">

                    <AutoCompleteTextView
                        android:id="@+id/plotsizeDropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/rosemary"
                        android:hint="@string/units"
                        android:inputType="none"
                        android:text="Ft" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/button1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gapSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rosemary"
                        android:hint="Gap Size (m)"
                        android:textSize="16sp"
                        android:textStyle="bold|normal" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp">

                    <AutoCompleteTextView

                        android:id="@+id/gapsizeDropDown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/rosemary"
                        android:hint="@string/units"
                        android:inputType="none"
                        android:text="Ft" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <RadioGroup
                android:id="@+id/meshType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="202dp"
                        android:layout_height="wrap_content"
                        android:width="50dp"
                        android:fontFamily="@font/rosemary"
                        android:text="@string/triangular_mesh"
                        android:textSize="16sp">

                    </com.google.android.material.radiobutton.MaterialRadioButton>

                    <TextView
                        android:id="@+id/previewTriangular"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/rosemary"
                        android:text="@string/preview"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:layout_width="202dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rosemary"
                        android:text="@string/square_mesh"
                        android:textSize="16sp">

                    </com.google.android.material.radiobutton.MaterialRadioButton>

                    <TextView
                        android:id="@+id/previewSquare"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:width="40dp"
                        android:fontFamily="@font/rosemary"
                        android:text="@string/preview"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>


